fix: correct REST controller test JSON strings